--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@ title: CodedOval
 ---
 <h3><a href="http://projectspaceavailable.com" title="project: space available" target="_blank">Project: Space Available</a> Artist Residency December 1<sup>st</sup> 2010 - January 31<sup>st</sup> 2011</h3>
 				<div class="left">
+					<h2>Latest Videos</h2>
+					{% include vimeo_flash.html %}
+				</div> <!-- left container -->
+				<div class="right">
 					<h2>Upcoming Events <span><a href="http://feeds.feedburner.com/CodedovalartifactualsEvents"><img src="images/feed-icon-14x14.png" title="subscribe to rss feed"/></a></span></h2>
 					<ul>
 							{% for post in site.categories.events reversed %}
@@ -12,12 +16,4 @@ title: CodedOval
 							<p>Many exciting events are in the works.<br/> They will appear here when they become known to me.</p>
 						<!-- <li>December 3<sup>rd</sup> 2010</li> -->
 					</ul>
-				</div> <!-- left container -->
-				<div class="right">
-					<h2>Thoughts and Reflections <span><a href="http://feeds.feedburner.com/CodedovalartifactualsBlog"><img src="images/feed-icon-14x14.png" title="subscribe to rss feed"/></a></span></h2>
-					<p>
-						{% for post in site.categories.blog %}
-						      <li><span class="{{ post.type }}"><a href="{{ post.url }}">{{ post.title }}</a> - {{ post.date | date: "%A, %B %d, %Y" }}</li>
-						    {% endfor %}						
-					</p>
 				</div>  <!-- right container -->
